--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "buffer": "^5.7.1",
     "cypress": "^11.2.0",
     "parcel": "^2.8.0",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "axios": "^1.2.0"
